# daylily-ursa

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_DIRECTIVE.md  README.md  SURVEY.md  activate  cluex.yaml  daylily-ursa_t0-1-16.tgz  dayu  dayu_activate  environment.yaml  environment.yml  iam-policy.json  iam-policy.json.original  id_report.md  pyproject.toml  tapdb_euid_use_alignment.md  ursa-conformance-directive.md  ursa_activate
.playwright-cli/: page-2026-04-15T14-22-22-965Z.yml  page-2026-04-15T14-24-39-278Z.yml
config/: daylily-workset-monitor.yaml  dayu_env.yaml  ecosystem-versions.json  tapdb-config-ursa.yaml  ursa-config.example.yaml  ursa_env.yaml  workset-monitor-config.template.yaml  workset-monitor-config.yaml
daylib/: __init__.py  analysis_store.py  atlas_result_client.py  billing.py  biospecimen.py  biospecimen_api.py  biospecimen_table_compat.py  bloom_resolver_client.py  cluster_service.py  config.py  export_fsx.py  file_api.py  file_metadata.py  file_registry.py  file_registry_table_compat.py  file_upload.py  manifest_registry.py  manifest_registry_table_compat.py  pipeline_status.py  purge_customer.py  rate_limiting.py  s3_bucket_validator.py  s3_utils.py  stage_samples.py  ursa_config.py  workset_api.py  workset_api_cli.py  workset_auth.py  workset_concurrent_processor.py  workset_customer.py  workset_customer_table_compat.py  workset_diagnostics.py  workset_integration.py  workset_metrics.py  workset_monitor.py  workset_monitor_cli.py  workset_multi_region.py  workset_notifications.py  workset_scheduler.py  workset_state_db.py  (+3 more)
daylib_ursa/: __init__.py  analysis_commands.py  analysis_jobs.py  analysis_samples_manifest.py  analysis_store.py  anomalies.py  atlas_result_client.py  auth.py  biospecimen.py  biospecimen_api.py  bloom_resolver_client.py  cluster_job_worker.py  cluster_jobs.py  cluster_service.py  config.py  dewey_client.py  domain_access.py  export_fsx.py  file_metadata.py  gui_app.py  manifest_registry.py  observability.py  pipeline_status.py  portal.py  portal_auth.py  portal_graph_state.py  portal_onboarding.py  portal_state.py  pricing_monitor.py  pricing_state.py  rate_limiting.py  resource_store.py  s3_bucket_validator.py  s3_utils.py  stable_manifest.py  stage_samples.py  staging_jobs.py  tapdb_mount.py  tapdb_templates.py  ursa_config.py  (+10 more)
daylily_ursa/: __init__.py  billing.py  biospecimen.py  biospecimen_api.py  cluster_service.py  config.py  exceptions.py  file_api.py  file_metadata.py  file_registry.py  file_upload.py  manifest_registry.py  pipeline_status.py  purge_customer.py  rate_limiting.py  s3_bucket_validator.py  s3_utils.py  security.py  ursa_config.py  workset_api.py  workset_api_cli.py  workset_concurrent_processor.py  workset_customer.py  workset_diagnostics.py  workset_integration.py  workset_metrics.py  workset_monitor.py  workset_monitor_cli.py  workset_notifications.py  workset_report.py  workset_scheduler.py  workset_state_db.py  workset_validation.py  workset_worker.py
docs/: API_V1_TO_V2_MIGRATION.md  AUTHENTICATION_SETUP.md  BILLING_INTEGRATION.md  CUSTOMER_PORTAL.md  ERROR_DIAGNOSTICS.md  GOOGLE_OAUTH_DEFAULT.md  IAM_SETUP_GUIDE.md  INTEGRATION_GUIDE.md  MULTI_REGION.md  PRODUCTION_FINAL_PHASES_AND_TASKS_TO_COMPLETE.md  PRODUCTION_READINESS_REVIEW_2026-01-24.md  QUICKSTART_WORKSET_MONITOR.md  QUICK_REFERENCE.md  README.md  RELEASE_NOTES_2026-03-05_API_V2_CUTOVER.md  WORKSET_STATE_DIAGRAM.md  tapdb_mount_execplan.md  ursa_atlas_return_contract.md  ursa_refactor_execplan.md  ursa_refactor_pr_plan.md  ursa_tapdb_refactor_design.md
etc/: domain_code_registry.json  prefix_ownership_registry.json
examples/: create_cognito_users.py  fix_cognito_auth_flow.py  run_api_with_auth.py  run_api_without_auth.py  setup_cognito.py  setup_cognito_auto.py
scripts/: bootstrap_biospecimen_templates.py  bootstrap_file_registry_templates.py  check_dynamodb_table.py  check_pre_commit_hooks.py  check_tapdb_state.py  drop_daylily_tables.py  init_biospecimen_tables.py  init_file_registry_tables.py  setup_cognito_google_default.sh
templates/: account.html  base.html  clusters.html  dashboard.html  docs.html  feature_requests.html  files.html  info.html  manifest_generator.html  support.html  usage.html  yaml_generator.html
tests/: __init__.py  conftest.py  test_activate_shell_behavior.py  test_activation_metadata.py  test_admin_cost_cluster_api.py  test_admin_gui_and_cluster_routes.py  test_analysis_ingest.py  test_analysis_store_relationships.py  test_anomalies.py  test_api_v2_route_contract.py  test_auth_dependencies.py  test_billing.py  test_biospecimen.py  test_biospecimen_api_routes.py  test_bloom_resolver_client.py  test_cli_aws.py  (+72 more)
(+171 files in other folders)
