[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "daylily-ursa"
dynamic = ["version"]
description = "Daylily Ursa beta analysis API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Daylily Informatics", email = "daylily@daylilyinformatics.com"}
]
dependencies = [
    "boto3>=1.26.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0.0",
    "cli-core-yo==2.0.0",
    # Cognito auth library
    "daylily-auth-cognito==2.0.1",
    # TapDB graph persistence
    "daylily-tapdb==5.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.0",
    "httpx>=0.25.0",
    "jsonschema>=4.17.0",
    "itsdangerous>=2.2.0",
    "tabulate",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
# Authentication support (optional)
auth = [
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

# Development dependencies
dev = [
    "bandit[toml]>=1.8.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "playwright>=1.42.0",
    "pre-commit>=3.8.0",
    "pytest-playwright>=0.4.4",
    "moto>=4.2.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "boto3-stubs[s3,sns,cloudwatch]>=1.28.0",
]

# Cluster integration (optional - for workset_monitor cluster operations)
cluster = [
    "daylily-ephemeral-cluster==0.7.614",
]

[project.scripts]
ursa = "daylib_ursa.cli:main"
daylily-workset-api = "daylib_ursa.workset_api_cli:main"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
fallback_version = "0.0.0"

[tool.setuptools.packages.find]
include = ["daylib_ursa*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
markers = [
    "e2e: marks tests as end-to-end tests requiring playwright",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_site_packages = true

[tool.bandit]
skips = ["B101", "B104", "B105", "B106", "B108", "B112", "B404", "B603", "B607"]
